@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+November 15, 2001
+	cleanups for transform.rotate
+
 November 13, 2001
 	added sprite module
 
